[package]
name = "diagwiz"
version = "0.1.0"
authors = ["Krzysztof Jagiello <me@kjagiello.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"

[dependencies]
diagram_base = { path = "../../src/diagrams/base", version = "0.1.0" }
diagram_seq = { path = "../../src/diagrams/seq", version = "0.1.0" }
wasm-bindgen = "0.2"
